parser.output
Terminals unused in grammar

    T_log_op


State 111 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: func_def

    2 func_def: T_id '(' fpar_list ')' ':' r_type local_def compound_stmt

    3 fpar_list: %empty
    4          | fpar_def fpar_list
    5          | ',' fpar_def fpar_list

    6 fpar_def: T_id ':' "reference" type
    7         | T_id ':' type

    8 data_type: "int"
    9          | "byte"

   10 type: data_type
   11     | data_type '[' ']'

   12 r_type: data_type
   13       | "proc"

   14 local_def: %empty
   15          | func_def local_def
   16          | var_def local_def

   17 var_def: T_id ':' data_type ';'
   18        | T_id ':' data_type '[' T_int_const ']' ';'

   19 stmt: ';'
   20     | l_value '=' expr ';'
   21     | compound_stmt
   22     | func_call ';'
   23     | "if" '(' cond ')' stmt
   24     | "if" '(' cond ')' stmt "else" stmt
   25     | "while" '(' cond ')' stmt
   26     | "return" ';'
   27     | "return" expr ';'

   28 compound_stmt: '{' stmt_list '}'

   29 stmt_list: %empty
   30          | stmt_list stmt

   31 func_call: T_id '(' ')'
   32          | T_id '(' expr expr_list ')'

   33 expr_list: %empty
   34          | ',' expr expr_list

   35 expr: T_int_const
   36     | T_char_const
   37     | l_value
   38     | '(' expr ')'
   39     | func_call
   40     | '+' expr
   41     | '-' expr
   42     | expr '+' expr
   43     | expr '-' expr
   44     | expr '*' expr
   45     | expr '/' expr
   46     | expr '%' expr

   47 l_value: T_id
   48        | T_id '[' expr ']'
   49        | T_string_lit

   50 cond: "true"
   51     | "false"
   52     | '(' cond ')'
   53     | '!' cond
   54     | expr T_rel_op expr
   55     | cond '&' cond
   56     | cond '|' cond


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 53
    '%' (37) 46
    '&' (38) 55
    '(' (40) 2 23 24 25 31 32 38 52
    ')' (41) 2 23 24 25 31 32 38 52
    '*' (42) 44
    '+' (43) 40 42
    ',' (44) 5 34
    '-' (45) 41 43
    '/' (47) 45
    ':' (58) 2 6 7 17 18
    ';' (59) 17 18 19 20 22 26 27
    '=' (61) 20
    '[' (91) 11 18 48
    ']' (93) 11 18 48
    '{' (123) 28
    '|' (124) 56
    '}' (125) 28
    error (256)
    "proc" (258) 13
    "if" (259) 23 24
    "else" (260) 24
    "while" (261) 25
    "true" (262) 50
    "false" (263) 51
    "return" (264) 26 27
    "reference" (265) 6
    "int" (266) 8
    "byte" (267) 9
    T_int_const (268) 18 35
    T_char_const (269) 36
    T_string_lit (270) 49
    T_id (271) 2 6 7 17 18 31 32 47 48
    T_rel_op <string_val> (272) 54
    T_log_op <char_val> (273)


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    program (38)
        on left: 1
        on right: 0
    func_def (39)
        on left: 2
        on right: 1 15
    fpar_list (40)
        on left: 3 4 5
        on right: 2 4 5
    fpar_def (41)
        on left: 6 7
        on right: 4 5
    data_type (42)
        on left: 8 9
        on right: 10 11 12 17 18
    type (43)
        on left: 10 11
        on right: 6 7
    r_type (44)
        on left: 12 13
        on right: 2
    local_def (45)
        on left: 14 15 16
        on right: 2 15 16
    var_def (46)
        on left: 17 18
        on right: 16
    stmt (47)
        on left: 19 20 21 22 23 24 25 26 27
        on right: 23 24 25 30
    compound_stmt (48)
        on left: 28
        on right: 2 21
    stmt_list (49)
        on left: 29 30
        on right: 28 30
    func_call (50)
        on left: 31 32
        on right: 22 39
    expr_list (51)
        on left: 33 34
        on right: 32 34
    expr (52)
        on left: 35 36 37 38 39 40 41 42 43 44 45 46
        on right: 20 27 32 34 38 40 41 42 43 44 45 46 48 54
    l_value (53)
        on left: 47 48 49
        on right: 20 37
    cond (54)
        on left: 50 51 52 53 54 55 56
        on right: 23 24 25 52 53 55 56


State 0

    0 $accept: . program $end

    T_id  shift, and go to state 1

    program   go to state 2
    func_def  go to state 3


State 1

    2 func_def: T_id . '(' fpar_list ')' ':' r_type local_def compound_stmt

    '('  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: func_def .

    $default  reduce using rule 1 (program)


State 4

    2 func_def: T_id '(' . fpar_list ')' ':' r_type local_def compound_stmt

    T_id  shift, and go to state 6
    ','   shift, and go to state 7

    $default  reduce using rule 3 (fpar_list)

    fpar_list  go to state 8
    fpar_def   go to state 9


State 5

    0 $accept: program $end .

    $default  accept


State 6

    6 fpar_def: T_id . ':' "reference" type
    7         | T_id . ':' type

    ':'  shift, and go to state 10


State 7

    5 fpar_list: ',' . fpar_def fpar_list

    T_id  shift, and go to state 6

    fpar_def  go to state 11


State 8

    2 func_def: T_id '(' fpar_list . ')' ':' r_type local_def compound_stmt

    ')'  shift, and go to state 12


State 9

    4 fpar_list: fpar_def . fpar_list

    T_id  shift, and go to state 6
    ','   shift, and go to state 7

    $default  reduce using rule 3 (fpar_list)

    fpar_list  go to state 13
    fpar_def   go to state 9


State 10

    6 fpar_def: T_id ':' . "reference" type
    7         | T_id ':' . type

    "reference"  shift, and go to state 14
    "int"        shift, and go to state 15
    "byte"       shift, and go to state 16

    data_type  go to state 17
    type       go to state 18


State 11

    5 fpar_list: ',' fpar_def . fpar_list

    T_id  shift, and go to state 6
    ','   shift, and go to state 7

    $default  reduce using rule 3 (fpar_list)

    fpar_list  go to state 19
    fpar_def   go to state 9


State 12

    2 func_def: T_id '(' fpar_list ')' . ':' r_type local_def compound_stmt

    ':'  shift, and go to state 20


State 13

    4 fpar_list: fpar_def fpar_list .

    $default  reduce using rule 4 (fpar_list)


State 14

    6 fpar_def: T_id ':' "reference" . type

    "int"   shift, and go to state 15
    "byte"  shift, and go to state 16

    data_type  go to state 17
    type       go to state 21


State 15

    8 data_type: "int" .

    $default  reduce using rule 8 (data_type)


State 16

    9 data_type: "byte" .

    $default  reduce using rule 9 (data_type)


State 17

   10 type: data_type .
   11     | data_type . '[' ']'

    '['  shift, and go to state 22

    $default  reduce using rule 10 (type)


State 18

    7 fpar_def: T_id ':' type .

    $default  reduce using rule 7 (fpar_def)


State 19

    5 fpar_list: ',' fpar_def fpar_list .

    $default  reduce using rule 5 (fpar_list)


State 20

    2 func_def: T_id '(' fpar_list ')' ':' . r_type local_def compound_stmt

    "proc"  shift, and go to state 23
    "int"   shift, and go to state 15
    "byte"  shift, and go to state 16

    data_type  go to state 24
    r_type     go to state 25


State 21

    6 fpar_def: T_id ':' "reference" type .

    $default  reduce using rule 6 (fpar_def)


State 22

   11 type: data_type '[' . ']'

    ']'  shift, and go to state 26


State 23

   13 r_type: "proc" .

    $default  reduce using rule 13 (r_type)


State 24

   12 r_type: data_type .

    $default  reduce using rule 12 (r_type)


State 25

    2 func_def: T_id '(' fpar_list ')' ':' r_type . local_def compound_stmt

    T_id  shift, and go to state 27

    $default  reduce using rule 14 (local_def)

    func_def   go to state 28
    local_def  go to state 29
    var_def    go to state 30


State 26

   11 type: data_type '[' ']' .

    $default  reduce using rule 11 (type)


State 27

    2 func_def: T_id . '(' fpar_list ')' ':' r_type local_def compound_stmt
   17 var_def: T_id . ':' data_type ';'
   18        | T_id . ':' data_type '[' T_int_const ']' ';'

    ':'  shift, and go to state 31
    '('  shift, and go to state 4


State 28

   15 local_def: func_def . local_def

    T_id  shift, and go to state 27

    $default  reduce using rule 14 (local_def)

    func_def   go to state 28
    local_def  go to state 32
    var_def    go to state 30


State 29

    2 func_def: T_id '(' fpar_list ')' ':' r_type local_def . compound_stmt

    '{'  shift, and go to state 33

    compound_stmt  go to state 34


State 30

   16 local_def: var_def . local_def

    T_id  shift, and go to state 27

    $default  reduce using rule 14 (local_def)

    func_def   go to state 28
    local_def  go to state 35
    var_def    go to state 30


State 31

   17 var_def: T_id ':' . data_type ';'
   18        | T_id ':' . data_type '[' T_int_const ']' ';'

    "int"   shift, and go to state 15
    "byte"  shift, and go to state 16

    data_type  go to state 36


State 32

   15 local_def: func_def local_def .

    $default  reduce using rule 15 (local_def)


State 33

   28 compound_stmt: '{' . stmt_list '}'

    $default  reduce using rule 29 (stmt_list)

    stmt_list  go to state 37


State 34

    2 func_def: T_id '(' fpar_list ')' ':' r_type local_def compound_stmt .

    $default  reduce using rule 2 (func_def)


State 35

   16 local_def: var_def local_def .

    $default  reduce using rule 16 (local_def)


State 36

   17 var_def: T_id ':' data_type . ';'
   18        | T_id ':' data_type . '[' T_int_const ']' ';'

    '['  shift, and go to state 38
    ';'  shift, and go to state 39


State 37

   28 compound_stmt: '{' stmt_list . '}'
   30 stmt_list: stmt_list . stmt

    "if"          shift, and go to state 40
    "while"       shift, and go to state 41
    "return"      shift, and go to state 42
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    ';'           shift, and go to state 45
    '{'           shift, and go to state 33
    '}'           shift, and go to state 46

    stmt           go to state 47
    compound_stmt  go to state 48
    func_call      go to state 49
    l_value        go to state 50


State 38

   18 var_def: T_id ':' data_type '[' . T_int_const ']' ';'

    T_int_const  shift, and go to state 51


State 39

   17 var_def: T_id ':' data_type ';' .

    $default  reduce using rule 17 (var_def)


State 40

   23 stmt: "if" . '(' cond ')' stmt
   24     | "if" . '(' cond ')' stmt "else" stmt

    '('  shift, and go to state 52


State 41

   25 stmt: "while" . '(' cond ')' stmt

    '('  shift, and go to state 53


State 42

   26 stmt: "return" . ';'
   27     | "return" . expr ';'

    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58
    ';'           shift, and go to state 59

    func_call  go to state 60
    expr       go to state 61
    l_value    go to state 62


State 43

   49 l_value: T_string_lit .

    $default  reduce using rule 49 (l_value)


State 44

   31 func_call: T_id . '(' ')'
   32          | T_id . '(' expr expr_list ')'
   47 l_value: T_id .
   48        | T_id . '[' expr ']'

    '('  shift, and go to state 63
    '['  shift, and go to state 64

    $default  reduce using rule 47 (l_value)


State 45

   19 stmt: ';' .

    $default  reduce using rule 19 (stmt)


State 46

   28 compound_stmt: '{' stmt_list '}' .

    $default  reduce using rule 28 (compound_stmt)


State 47

   30 stmt_list: stmt_list stmt .

    $default  reduce using rule 30 (stmt_list)


State 48

   21 stmt: compound_stmt .

    $default  reduce using rule 21 (stmt)


State 49

   22 stmt: func_call . ';'

    ';'  shift, and go to state 65


State 50

   20 stmt: l_value . '=' expr ';'

    '='  shift, and go to state 66


State 51

   18 var_def: T_id ':' data_type '[' T_int_const . ']' ';'

    ']'  shift, and go to state 67


State 52

   23 stmt: "if" '(' . cond ')' stmt
   24     | "if" '(' . cond ')' stmt "else" stmt

    "true"        shift, and go to state 68
    "false"       shift, and go to state 69
    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '!'           shift, and go to state 70
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 71

    func_call  go to state 60
    expr       go to state 72
    l_value    go to state 62
    cond       go to state 73


State 53

   25 stmt: "while" '(' . cond ')' stmt

    "true"        shift, and go to state 68
    "false"       shift, and go to state 69
    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '!'           shift, and go to state 70
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 71

    func_call  go to state 60
    expr       go to state 72
    l_value    go to state 62
    cond       go to state 74


State 54

   35 expr: T_int_const .

    $default  reduce using rule 35 (expr)


State 55

   36 expr: T_char_const .

    $default  reduce using rule 36 (expr)


State 56

   40 expr: '+' . expr

    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 75
    l_value    go to state 62


State 57

   41 expr: '-' . expr

    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 76
    l_value    go to state 62


State 58

   38 expr: '(' . expr ')'

    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 77
    l_value    go to state 62


State 59

   26 stmt: "return" ';' .

    $default  reduce using rule 26 (stmt)


State 60

   39 expr: func_call .

    $default  reduce using rule 39 (expr)


State 61

   27 stmt: "return" expr . ';'
   42 expr: expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   46     | expr . '%' expr

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82
    ';'  shift, and go to state 83


State 62

   37 expr: l_value .

    $default  reduce using rule 37 (expr)


State 63

   31 func_call: T_id '(' . ')'
   32          | T_id '(' . expr expr_list ')'

    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58
    ')'           shift, and go to state 84

    func_call  go to state 60
    expr       go to state 85
    l_value    go to state 62


State 64

   48 l_value: T_id '[' . expr ']'

    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 86
    l_value    go to state 62


State 65

   22 stmt: func_call ';' .

    $default  reduce using rule 22 (stmt)


State 66

   20 stmt: l_value '=' . expr ';'

    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 87
    l_value    go to state 62


State 67

   18 var_def: T_id ':' data_type '[' T_int_const ']' . ';'

    ';'  shift, and go to state 88


State 68

   50 cond: "true" .

    $default  reduce using rule 50 (cond)


State 69

   51 cond: "false" .

    $default  reduce using rule 51 (cond)


State 70

   53 cond: '!' . cond

    "true"        shift, and go to state 68
    "false"       shift, and go to state 69
    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '!'           shift, and go to state 70
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 71

    func_call  go to state 60
    expr       go to state 72
    l_value    go to state 62
    cond       go to state 89


State 71

   38 expr: '(' . expr ')'
   52 cond: '(' . cond ')'

    "true"        shift, and go to state 68
    "false"       shift, and go to state 69
    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '!'           shift, and go to state 70
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 71

    func_call  go to state 60
    expr       go to state 90
    l_value    go to state 62
    cond       go to state 91


State 72

   42 expr: expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   46     | expr . '%' expr
   54 cond: expr . T_rel_op expr

    T_rel_op  shift, and go to state 92
    '+'       shift, and go to state 78
    '-'       shift, and go to state 79
    '*'       shift, and go to state 80
    '/'       shift, and go to state 81
    '%'       shift, and go to state 82


State 73

   23 stmt: "if" '(' cond . ')' stmt
   24     | "if" '(' cond . ')' stmt "else" stmt
   55 cond: cond . '&' cond
   56     | cond . '|' cond

    '&'  shift, and go to state 93
    '|'  shift, and go to state 94
    ')'  shift, and go to state 95


State 74

   25 stmt: "while" '(' cond . ')' stmt
   55 cond: cond . '&' cond
   56     | cond . '|' cond

    '&'  shift, and go to state 93
    '|'  shift, and go to state 94
    ')'  shift, and go to state 96


State 75

   40 expr: '+' expr .
   42     | expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   46     | expr . '%' expr

    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 40 (expr)


State 76

   41 expr: '-' expr .
   42     | expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   46     | expr . '%' expr

    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 41 (expr)


State 77

   38 expr: '(' expr . ')'
   42     | expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   46     | expr . '%' expr

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82
    ')'  shift, and go to state 97


State 78

   42 expr: expr '+' . expr

    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 98
    l_value    go to state 62


State 79

   43 expr: expr '-' . expr

    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 99
    l_value    go to state 62


State 80

   44 expr: expr '*' . expr

    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 100
    l_value    go to state 62


State 81

   45 expr: expr '/' . expr

    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 101
    l_value    go to state 62


State 82

   46 expr: expr '%' . expr

    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 102
    l_value    go to state 62


State 83

   27 stmt: "return" expr ';' .

    $default  reduce using rule 27 (stmt)


State 84

   31 func_call: T_id '(' ')' .

    $default  reduce using rule 31 (func_call)


State 85

   32 func_call: T_id '(' expr . expr_list ')'
   42 expr: expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   46     | expr . '%' expr

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82
    ','  shift, and go to state 103

    $default  reduce using rule 33 (expr_list)

    expr_list  go to state 104


State 86

   42 expr: expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   46     | expr . '%' expr
   48 l_value: T_id '[' expr . ']'

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82
    ']'  shift, and go to state 105


State 87

   20 stmt: l_value '=' expr . ';'
   42 expr: expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   46     | expr . '%' expr

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82
    ';'  shift, and go to state 106


State 88

   18 var_def: T_id ':' data_type '[' T_int_const ']' ';' .

    $default  reduce using rule 18 (var_def)


State 89

   53 cond: '!' cond .
   55     | cond . '&' cond
   56     | cond . '|' cond

    '&'  shift, and go to state 93
    '|'  shift, and go to state 94

    $default  reduce using rule 53 (cond)


State 90

   38 expr: '(' expr . ')'
   42     | expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   46     | expr . '%' expr
   54 cond: expr . T_rel_op expr

    T_rel_op  shift, and go to state 92
    '+'       shift, and go to state 78
    '-'       shift, and go to state 79
    '*'       shift, and go to state 80
    '/'       shift, and go to state 81
    '%'       shift, and go to state 82
    ')'       shift, and go to state 97


State 91

   52 cond: '(' cond . ')'
   55     | cond . '&' cond
   56     | cond . '|' cond

    '&'  shift, and go to state 93
    '|'  shift, and go to state 94
    ')'  shift, and go to state 107


State 92

   54 cond: expr T_rel_op . expr

    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 108
    l_value    go to state 62


State 93

   55 cond: cond '&' . cond

    "true"        shift, and go to state 68
    "false"       shift, and go to state 69
    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '!'           shift, and go to state 70
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 71

    func_call  go to state 60
    expr       go to state 72
    l_value    go to state 62
    cond       go to state 109


State 94

   56 cond: cond '|' . cond

    "true"        shift, and go to state 68
    "false"       shift, and go to state 69
    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '!'           shift, and go to state 70
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 71

    func_call  go to state 60
    expr       go to state 72
    l_value    go to state 62
    cond       go to state 110


State 95

   23 stmt: "if" '(' cond ')' . stmt
   24     | "if" '(' cond ')' . stmt "else" stmt

    "if"          shift, and go to state 40
    "while"       shift, and go to state 41
    "return"      shift, and go to state 42
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    ';'           shift, and go to state 45
    '{'           shift, and go to state 33

    stmt           go to state 111
    compound_stmt  go to state 48
    func_call      go to state 49
    l_value        go to state 50


State 96

   25 stmt: "while" '(' cond ')' . stmt

    "if"          shift, and go to state 40
    "while"       shift, and go to state 41
    "return"      shift, and go to state 42
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    ';'           shift, and go to state 45
    '{'           shift, and go to state 33

    stmt           go to state 112
    compound_stmt  go to state 48
    func_call      go to state 49
    l_value        go to state 50


State 97

   38 expr: '(' expr ')' .

    $default  reduce using rule 38 (expr)


State 98

   42 expr: expr . '+' expr
   42     | expr '+' expr .
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   46     | expr . '%' expr

    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 42 (expr)


State 99

   42 expr: expr . '+' expr
   43     | expr . '-' expr
   43     | expr '-' expr .
   44     | expr . '*' expr
   45     | expr . '/' expr
   46     | expr . '%' expr

    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 43 (expr)


State 100

   42 expr: expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   44     | expr '*' expr .
   45     | expr . '/' expr
   46     | expr . '%' expr

    $default  reduce using rule 44 (expr)


State 101

   42 expr: expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   45     | expr '/' expr .
   46     | expr . '%' expr

    $default  reduce using rule 45 (expr)


State 102

   42 expr: expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   46     | expr . '%' expr
   46     | expr '%' expr .

    $default  reduce using rule 46 (expr)


State 103

   34 expr_list: ',' . expr expr_list

    T_int_const   shift, and go to state 54
    T_char_const  shift, and go to state 55
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    '+'           shift, and go to state 56
    '-'           shift, and go to state 57
    '('           shift, and go to state 58

    func_call  go to state 60
    expr       go to state 113
    l_value    go to state 62


State 104

   32 func_call: T_id '(' expr expr_list . ')'

    ')'  shift, and go to state 114


State 105

   48 l_value: T_id '[' expr ']' .

    $default  reduce using rule 48 (l_value)


State 106

   20 stmt: l_value '=' expr ';' .

    $default  reduce using rule 20 (stmt)


State 107

   52 cond: '(' cond ')' .

    $default  reduce using rule 52 (cond)


State 108

   42 expr: expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   46     | expr . '%' expr
   54 cond: expr T_rel_op expr .

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82

    $default  reduce using rule 54 (cond)


State 109

   55 cond: cond . '&' cond
   55     | cond '&' cond .
   56     | cond . '|' cond

    $default  reduce using rule 55 (cond)


State 110

   55 cond: cond . '&' cond
   56     | cond . '|' cond
   56     | cond '|' cond .

    $default  reduce using rule 56 (cond)


State 111

   23 stmt: "if" '(' cond ')' stmt .
   24     | "if" '(' cond ')' stmt . "else" stmt

    "else"  shift, and go to state 115

    "else"    [reduce using rule 23 (stmt)]
    $default  reduce using rule 23 (stmt)


State 112

   25 stmt: "while" '(' cond ')' stmt .

    $default  reduce using rule 25 (stmt)


State 113

   34 expr_list: ',' expr . expr_list
   42 expr: expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   46     | expr . '%' expr

    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '%'  shift, and go to state 82
    ','  shift, and go to state 103

    $default  reduce using rule 33 (expr_list)

    expr_list  go to state 116


State 114

   32 func_call: T_id '(' expr expr_list ')' .

    $default  reduce using rule 32 (func_call)


State 115

   24 stmt: "if" '(' cond ')' stmt "else" . stmt

    "if"          shift, and go to state 40
    "while"       shift, and go to state 41
    "return"      shift, and go to state 42
    T_string_lit  shift, and go to state 43
    T_id          shift, and go to state 44
    ';'           shift, and go to state 45
    '{'           shift, and go to state 33

    stmt           go to state 117
    compound_stmt  go to state 48
    func_call      go to state 49
    l_value        go to state 50


State 116

   34 expr_list: ',' expr expr_list .

    $default  reduce using rule 34 (expr_list)


State 117

   24 stmt: "if" '(' cond ')' stmt "else" stmt .

    $default  reduce using rule 24 (stmt)
